# agents-workshop

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  mise.toml  observability.py  pyproject.toml  pyrightconfig.json  run.py
agents/: afterhours_scout.md  club_scout.md  deep_agent.md  deep_orchestrator.md  food_scout.md  manager.md  merge.md  planner.md  planner_v1.md  rave_scout.md  reviewer.md  scout.md  search_planner.md  search_synthesizer.md  synthesizer.md  ticket_scout.md
api/: main.py
config/: models.yaml  settings.py  tools.yaml
docs/: _config.yml  dev-guide.md  index.md  subteam-tickets.md  vizlang-inputs.md  workshop-roadmap.md
docs/_layouts/: default.html
docs/lessons/m1/: README.md
docs/lessons/m2/: README.md
docs/lessons/m3/: README.md  index.md
docs/lessons/m4/: README.md
graph/: __init__.py  common.py  registry.py
graph/m1/: nodes.py  state.py  workflow.py
graph/m2/: conditions.py  nodes.py  state.py  workflow.py
graph/m3/: conditions.py  nodes.py  state.py  workflow.py
graph/m4/: conditions.py  nodes.py  state.py  workflow.py
graph/m5/: conditions.py  nodes.py  state.py  workflow.py
graph/m6/: conditions.py  nodes.py  state.py  workflow.py
schemas/: __init__.py  nightout.py
tests/: test_m6_pipeline.py
tools/: base.py  events.py  firecrawl.py  registry.py
ui/: index.html  package-lock.json  package.json  tsconfig.app.tsbuildinfo  vite.config.ts
ui/src/: App.tsx  main.tsx  styles.css
ui/src/api/: client.ts  (+2 more)
vizlang/: latest.py  m1.py  m2.py  m3.py  m4.py  m5.py  m6.py
(+22 files in other folders)
